# agent-portabase

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  databases.json  databases.toml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: dev.yml  release.yml
docker/: Dockerfile
docker/dockerfile/app/: Dockerfile
requirements/: requirements.txt
scripts/: seed-mysql.sql  seed.sql
src/: celerybeat-schedule  logging_config.py  main.py  worker.py
src/routes/: main.py
src/routes/http/: welcome.py
src/settings/: __init__.py  base.py  development.py  production.py
src/tasks/: database.py  result.py  tasks.py
src/utils/: clear_file_directory.py  cron.py  database.py  edge_key.py  format_validation.py  get_config.py  get_database_instance.py  get_databases_config.py  get_nested_value.py  init.py  postgres.py  status_request.py  upload_restoration_file.py
src/utils/plugin/: common.py  mysql.py  postgres.py
